# mimic_iv_analysis

./: .gitignore  1.5  CLAUDE.md  README.md  README_docify.md  README_gemini.md  mimic_iv.code-workspace  mimic_iv_am.code-workspace  pyproject.toml  pytest.ini  reinstall.sh  requirements.txt  run_app.py  run_streamlit.py  setup.py  test_basic_merge.py  test_import.py  test_imports.py  test_refactored_tablenames.py
.streamlit/: config.toml  deployment_config.toml  runtime.py  secrets.toml
.windsurf/rules/: pythoninterpreter.md
documentations/: DASK_DASHBOARD_TROUBLESHOOTING.md  DASK_OPTIMIZATION_GUIDE.md  DATA_STRUCTURE.md  MEMORY_OPTIMIZATION.md  README.md  mimic_iv_data_structure.md
documentations/pyhealth/: .buildinfo  index.html  objects.inv  pyhealth.epub
documentations/pyhealth/_static/: documentation_options.js
mimic_iv_analysis/: __init__.py
mimic_iv_analysis/configurations/: __init__.py  params.py
mimic_iv_analysis/core/: __init__.py  clustering.py  dask_config_optimizer.py  data_loader.ipynb  data_loader.py  data_loader_gemini.py  feature_engineering.py  filtering.py  params.py  visualizer.py
mimic_iv_analysis/examples/: data_loader_examples.py  exmples_data_loader.py
mimic_iv_analysis/io/: __init__.py  data_loader.ipynb  data_loader.py  data_loader_process_paralleled.py  temp.ipynb
mimic_iv_analysis/mimic_iv_analysis/examples/dummy_file.py/parquet_files/: d_labitems_example.parquet
mimic_iv_analysis/tests/: test_data_loader.py
mimic_iv_analysis/visualization/: __init__.py  app.backup.py  app.py  app_huggingface.py  app_huggingface_refactored_claude.py  app_huggingface_refactored_gemini.py  app_pyhealth.py  app_pyhealth_refactored.py  app_refactored_aistudio.py  app_refactored_claude.py  app_refactored_gemini.py  visualizer_utils.py
mimic_iv_analysis/visualization/Obsolete/: app_works_before_refactoring.py
mimic_iv_analysis/visualization/app_components/: __init__.py  analysis_visualization_tab.py  clustering_analysis_tab.py  exploration_and_viz.py  feature_engineering_tab.py  filtering_tab.py  sidebar.py
scripts/: dask_config_optimizer.py  install.sh  publish_to_pypi.sh  release_manager.py  run_dashboard.py  run_docker.sh  run_streamlit.py
setup_config/: .env.example  .pypirc.backup  Dockerfile  MANIFEST.in  docker-compose.yml  pyproject.toml  requirements.txt
setup_config/docker/: .dockerignore  Dockerfile  docker-compose.yml
src/: __init__.py  data_loader.py
src/agent/: __init__.py  app.py
src/agent/configurations/: __init__.py
src/agent/core/: __init__.py  predictive_modeling_module.py
src/agent/data/: __init__.py  data_loader.py
src/agent2/: README.md  __init__.py  app.py  requirements.txt
src/agent2/data/: __init__.py  data_loader.py
src/agent2/models/: __init__.py  clustering.py  feature_engineering.py
src/agent2/visualization/: __init__.py  visualizer.py
src/analysis/: __init__.py
src/claude/: __init__.py  app.py
src/configurations/: __init__.py
src/core/: __init__.py  clinical_interpretation_module.py  eda_module.py  order_pattern_module.py  patient_trajectory_module.py  predictive_modeling_module.py
src/data/: __init__.py
src/mimic_iv_analysis/: __init__.py
src/mimic_iv_analysis/core/: clinical_interpretation_module.py
src/mimic_iv_analysis/data/: data_loader.py
src/mimic_iv_analysis/utils/: __init__.py
src/mimic_iv_analysis/visualization/: __init__.py  app.py
src/models/: __init__.py  clustering.py  feature_engineering.py
src/pipeline/: GUI_README.md  README.md  __init__.py  app.py  model_module.py  preprocessing_module.py  requirements.txt  run_project.sh
src/pipeline/config/: Dockerfile  __init__.py  docker-compose.yml  requirements.txt
src/pipeline/data/: __init__.py
src/pipeline/images/: __init__.py
src/pipeline/model/: __init__.py  fairness.py
src/pipeline/notes/: __init__.py
src/pipeline/preprocessing/: __init__.py
src/pipeline/utils/: __init__.py
src/utils/: __init__.py
src/visualization/: __init__.py  _app_claude.py  app.py  app_claude.py  app_huggingface.py  app_pyhealth.py  app_pyhealth_.py  app_pyhealth_old.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_data_loader_unittest.py  test_imports.py
