[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "mimic_iv_analysis"
version         = "0.1.0"
description     = "A comprehensive toolkit for analyzing MIMIC-IV clinical database"
readme          = "README.md"
requires-python = ">=3.10,<3.13"
license         = {text = "MIT"}
authors         = [
    {name = "Artin Majdi", email = "msm2024@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core dependencies defined in requirements.txt
]

[project.urls]
"Homepage"      = "https://github.com/artinmajdi/mimic_iv_analysis"
"Documentation" = "https://mimic-iv-analysis.readthedocs.io/"
"Bug Tracker"   = "https://github.com/artinmajdi/mimic_iv_analysis/issues"

[project.scripts]
mimic-iv = "visualization.app:main"

[tool.setuptools]
package-dir          = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where   = ["src"]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length    = 88
target-version = ["py310", "py311", "py312"]
include        = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version              = "3.12"
warn_return_any             = true
warn_unused_configs         = true
disallow_untyped_defs       = true
disallow_incomplete_defs    = true
check_untyped_defs          = true
disallow_untyped_decorators = true
no_implicit_optional        = true
strict_optional             = true
